--- a/tts_config.json
+++ b/tts_config.json
@@ -2,6 +2,7 @@
     "use_local_model": true,
     "specific_model": "Lasinya_01",
     "local_models_path": "B:\\.my_Scripts\\STS\\LocalEmotionalAIVoiceChat\\models\\xtts",
+    "_comment": "Below are the settings for add the filename and language of audio to be used as reference",
     "references_folder": "reference_wavs",
     "reference_wav_file_name": "default_voice.wav",
     "reference_wav_file_lang": "en",
